fix product-preview-card-component footer text-align

--- a/product-preview-card-component/styles.css
+++ b/product-preview-card-component/styles.css
@@ -128,7 +128,7 @@ p {
 }
 
 .attribution {
-	text-align: right;
+	text-align: center;
 }
 
 @media (max-width: 640px) {
